--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ Thumbs.db
 # Project specific
 # requirements.txt - uncomment if using reqtracker to manage this file
 # requirements-dev.txt - tracked in version control for development setup
+
+# Backups
+*.bak
+*.tmp
+*.temp
+*.backup
